# imap_processing

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile
.github/workflows/: release.yml  test.yml
app/: Dockerfile  app.py
app/stacks/: app_stack.py  ecr_construct.py
docs/source/: conf.py  index.rst
docs/source/code-documentation/: hi.rst  idex.rst  spice.rst  swe.rst  ultra.rst
docs/source/data-access/: index.rst  naming-conventions.rst  openapi.yml
docs/source/development/: index.rst
examples/: Dockerfile.processing
imap_processing/: Dockerfile  __init__.py  cli.py  quality_flags.py  utils.py
imap_processing/ancillary/: ancillary_dataset_combiner.py
imap_processing/ccsds/: ccsds_data.py  excel_to_xtce.py
imap_processing/cdf/: utils.py
imap_processing/cdf/config/: imap_codice_global_cdf_attrs.yaml  imap_codice_l1a_variable_attrs.yaml  imap_codice_l1b_variable_attrs.yaml  imap_constant_attrs.yaml  imap_enamaps_l2-common_variable_attrs.yaml  imap_enamaps_l2-healpix_variable_attrs.yaml  imap_enamaps_l2-rectangular_variable_attrs.yaml  imap_glows_global_cdf_attrs.yaml  imap_glows_l1a_variable_attrs.yaml  imap_glows_l1b_variable_attrs.yaml  imap_glows_l2_variable_attrs.yaml  imap_hi_global_cdf_attrs.yaml  imap_hi_variable_attrs.yaml  imap_hit_global_cdf_attrs.yaml  imap_hit_l1a_variable_attrs.yaml  imap_hit_l1b_variable_attrs.yaml  imap_hit_l2_variable_attrs.yaml  imap_idex_global_cdf_attrs.yaml  imap_idex_l1a_variable_attrs.yaml  imap_idex_l1b_variable_attrs.yaml  imap_idex_l2a_variable_attrs.yaml  imap_idex_l2b_variable_attrs.yaml  imap_idex_l2c_variable_attrs.yaml  imap_lo_global_cdf_attrs.yaml  imap_lo_l1a_variable_attrs.yaml  imap_mag_global_cdf_attrs.yaml  imap_mag_l1a_variable_attrs.yaml  imap_mag_l1b_variable_attrs.yaml  imap_mag_l1c_variable_attrs.yaml  imap_spacecraft_global_cdf_attrs.yaml  imap_spacecraft_variable_attrs.yaml  imap_swapi_global_cdf_attrs.yaml  imap_swapi_variable_attrs.yaml  imap_swe_global_cdf_attrs.yaml  imap_swe_l1a_variable_attrs.yaml  imap_swe_l1b_variable_attrs.yaml  imap_swe_l2_variable_attrs.yaml  imap_ultra_global_cdf_attrs.yaml  imap_ultra_l1a_variable_attrs.yaml  imap_ultra_l1b_variable_attrs.yaml  (+1 more)
imap_processing/codice/: codice_l1a.py  codice_l1b.py  constants.py
imap_processing/ena_maps/: ena_maps.py
imap_processing/ena_maps/utils/: coordinates.py  map_utils.py  naming.py  spatial_utils.py
imap_processing/glows/l1a/: glows_l1a.py  glows_l1a_data.py
imap_processing/glows/l1b/: glows_l1b.py  glows_l1b_data.py
imap_processing/glows/l2/: glows_l2.py
imap_processing/hi/: utils.py
imap_processing/hi/l1a/: hi_l1a.py  histogram.py  science_direct_event.py
imap_processing/hi/l1b/: hi_l1b.py
imap_processing/hi/l1c/: hi_l1c.py
imap_processing/hi/l2/: hi_l2.py
imap_processing/hit/: hit_utils.py
imap_processing/hit/ancillary/: imap_hit_l1b-to-l2-standard-dt0-factors_20250219_v002.csv  imap_hit_l1b-to-l2-standard-dt1-factors-20250219_v002.csv  imap_hit_l1b-to-l2-standard-dt2-factors-20250219_v002.csv
imap_processing/hit/l0/: constants.py  decom_hit.py
imap_processing/hit/l1a/: hit_l1a.py
imap_processing/hit/l1b/: constants.py  hit_l1b.py
imap_processing/hit/l2/: constants.py  hit_l2.py
imap_processing/hit/packet_definitions/: hit_packet_definitions.xml
imap_processing/ialirt/: process_ephemeris.py
imap_processing/ialirt/l0/: ialirt_spice.py  mag_l0_ialirt_data.py  parse_mag.py  process_swapi.py  process_swe.py
imap_processing/ialirt/packet_definitions/: ialirt.xml  ialirt_codicehi.xml  ialirt_codicelo.xml  ialirt_mag.xml  ialirt_swapi.xml  ialirt_swe.xml
imap_processing/ialirt/utils/: grouping.py  time.py
imap_processing/idex/: atomic_masses.csv  decode.py  idex_constants.py  idex_l0.py  idex_l1a.py  idex_l1b.py  idex_l2a.py  idex_l2b.py  idex_l2c.py  idex_utils.py  idex_variable_unpacking_and_eu_conversion.csv
imap_processing/idex/packet_definitions/: idex_housekeeping_packet_definition.xml
imap_processing/lo/l0/: lo_science.py
imap_processing/lo/l1a/: lo_l1a.py
imap_processing/lo/l1b/: lo_l1b.py  tof_conversions.py
imap_processing/lo/l1c/: lo_l1c.py
imap_processing/lo/packet_definitions/: lo_xtce.xml
imap_processing/mag/: constants.py  imap_mag_sdc-configuration_v001.yaml  imap_mag_sdc_configuration_v001.py
imap_processing/mag/l0/: decom_mag.py
imap_processing/mag/l1a/: mag_l1a.py  mag_l1a_data.py
imap_processing/mag/l1b/: mag_l1b.py
imap_processing/mag/l1c/: interpolation_methods.py  mag_l1c.py
imap_processing/mag/l2/: mag_l2.py  mag_l2_data.py
imap_processing/spacecraft/: quaternions.py
imap_processing/spacecraft/packet_definitions/: scid_x252.xml
imap_processing/spice/: geometry.py  kernels.py  pointing_frame.py  repoint.py  spin.py  time.py
imap_processing/swapi/: swapi_utils.py
imap_processing/swapi/l1/: swapi_l1.py
imap_processing/swapi/l2/: swapi_l2.py
imap_processing/swapi/packet_definitions/: swapi_packet_definition.xml
imap_processing/swe/l1a/: swe_l1a.py  swe_science.py
imap_processing/swe/l1b/: swe_l1b.py  swe_l1b_science.py
imap_processing/swe/l2/: swe_l2.py
imap_processing/swe/packet_definitions/: swe_packet_definition.xml
imap_processing/swe/utils/: checker-board-indices.csv  swe_constants.py  swe_utils.py
imap_processing/tests/: conftest.py  test_cli.py  test_quality_flags.py  test_utils.py
imap_processing/tests/ancillary/: test_ancillary_dataset_combiner.py
imap_processing/tests/ccsds/: test_excel_to_xtce.py
imap_processing/tests/cdf/: test_utils.py
imap_processing/tests/codice/: conftest.py  (+4 more)
imap_processing/ultra/: constants.py
tools/metadata_generation/: metadata_generator.py
tools/spice/: spice_examples.py  spice_utils.py
(+238 files in other folders)
